--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<div class="container">
 		<div>
 			<br><br>
-			<h4>Progress Bar </h4>
+			<h4>Progress Bar Test</h4>
 			<hr>
 			<div class="progress">
 			  <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
