--- a/lightbox.html
+++ b/lightbox.html
@@ -45,6 +45,21 @@
 			margin: 5px;
 		}
 
+		.bank-linking-process{
+			margin-top: 30px;
+			text-align: center;
+		}
+
+		.bank-linking-desc{
+			font-size: 16px;
+			margin-top: 15px;
+			margin-bottom: 15px;
+		}
+
+		.bank-accounts-information-success{
+			text-align: center;
+		}
+
 		.pull-right{
 			float: right;
 		}
@@ -136,14 +151,102 @@
 		</div>
 	</div>
 
+	<!-- Link to bank account and processes data -->
+	<div class="hidden-area" id="step-3">
+		<div class="bank-accounts-information">
+        	<!-- Desc -->
+			<h3>Linking to your banking account</h3>
+			<p></p><br><br>
+			<!-- Desc -->
+			<!-- Progress Bar -->
+			<div class="progress">
+			  <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+			</div>
+			<!-- Progress Bar -->
+
+			<div class="bank-linking-process">
+				<p class="bank-linking-desc">
+
+				</p>
+				<p class="grey-font">Tips: XXXX</p>
+			</div>
+		</div>
+	</div>
+
+	<!-- Link to bank account and processes data -->
+	<div class="hidden-area" id="step-4">
+		<div class="bank-accounts-information-success">
+        	<!-- Desc -->
+			<h3>Success!</h3>
+			<p>Let's go to your account overview</p><br><br>
+			<!-- Desc -->
+			
+			<button type="button" class="btn btn-primary">Let's GO!</button>			
+		</div>
+	</div>
+
 	<script>
 		function displayBlock(div_id){
 
 			$("#modal-content").html("");
 
 			if(div_id){
-				div_id.clone().removeAttr("class").appendTo("#modal-content");
+				var clone_div = div_id.clone();
+				div_id.remove();
+				clone_div.removeAttr("class").appendTo("#modal-content");
+
+
+				if(clone_div.attr("id") == "step-3"){
+
+					updateProgressBar(0, "Getting ready...");
+					// doing ajax
+					// 1. linking to bank account
+					setTimeout(function (){
+
+						console.log("linkToBankAccount");
+						// using AJAX
+						// ...
+
+						// when finish
+						updateProgressBar(33, "Some Tips 1");
+
+
+						// 2. gather data
+						setTimeout(function(){
+							console.log("gatheringData");
+							// using AJAX
+							// ...
+
+							// when finish
+							updateProgressBar(66, "Some Tips 2");
+
+
+							// 3. go to result page
+							setTimeout(function(){
+								console.log("goToResultPage");
+								// using AJAX
+								// ...
+
+								// when finish
+								updateProgressBar(100, "Some Tips 3");
+
+								setTimeout(function(){
+									displayBlock($("#step-4"));
+								}, 1000);
+							}, 2000);
+						}, 2000);
+					}, 2000);
+
+				}
+
 			}
+		}
+
+		function updateProgressBar(percentage, tips){
+			$(".progress-bar").css("width", percentage + "%");
+			$(".bank-linking-desc").hide();
+			$(".bank-linking-desc").html("");
+			$(".bank-linking-desc").html(tips).show();
 		}
 
 
