--- a/lightbox.html
+++ b/lightbox.html
@@ -3,10 +3,11 @@
 <head>
 	<title> Lightbox Progress Bar </title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+	<!-- <link href="css/fs-modal.min.css" rel="stylesheet"> -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-
+	<!-- <script src="js/fs-modal.min.js"></script> -->
 	<style>
 		.hidden-area{
 			display: none;
@@ -63,6 +64,36 @@
 		.pull-right{
 			float: right;
 		}
+
+		/* Mobile */
+		@media all and (max-width: 768px) { 
+			.modal-dialog{
+				margin: 0px;
+				width: 100% !important;
+				height: 100%;
+			}
+
+			.modal-content{
+				/*height: 100% !important;*/
+				border: 0px  !important;
+     			border-radius: 0 !important;
+			}
+
+			.modal-backdrop {
+			    position: fixed;
+			    top: 0;
+			    right: 0;
+			    bottom: 0;
+			    left: 0;
+			    z-index: 1040;
+			    background-color: #FFFFFF;
+			}
+			.modal-backdrop.in {
+			    filter: alpha(opacity=0);
+			    opacity: .0;
+			}
+		} 
+
 	</style>
 </head>
 <body>
@@ -72,12 +103,12 @@
 			<h4>Add bank account in lightbox</h4>
 			<hr>
 			<!-- Button trigger modal -->
-			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addBankAccount">
+			<button type="button" class="btn btn-primary resetBtn" data-toggle="modal" data-target="#addBankAccount">
 			  Add bank account
 			</button>
 
 			<!-- Modal -->
-			<div class="modal fade large-modal" id="addBankAccount" tabindex="-1" role="dialog" aria-labelledby="addBankAccount" aria-hidden="true">
+			<div class="modal fade large-modal modal-fullscreen" id="addBankAccount" tabindex="-1" role="dialog" aria-labelledby="addBankAccount" aria-hidden="true">
 			  <div class="modal-dialog modal-lg" role="document">
 			    <div class="modal-content">
 			      <div class="modal-header">
@@ -181,7 +212,7 @@
 			<p>Let's go to your account overview</p><br><br>
 			<!-- Desc -->
 			
-			<button type="button" class="btn btn-primary">Let's GO!</button>			
+			<button type="button" class="btn btn-primary">Let's GO!</button> 
 		</div>
 	</div>
 
@@ -192,7 +223,7 @@
 
 			if(div_id){
 				var clone_div = div_id.clone();
-				div_id.remove();
+				// div_id.remove();
 				clone_div.removeAttr("class").appendTo("#modal-content");
 
 
@@ -252,6 +283,11 @@
 
 		// simple steps
 		displayBlock($("#step-1"));
+
+		// reset btn
+		$(".resetBtn").click(function(){
+			displayBlock($("#step-1"));
+		});
 
 	</script>
 </body>
